# bowling-schedule

./: .gitignore  CLAUDE-summer-moves.md  CLAUDE.md  Cargo.toml  README.md  biome.json  convert_real_schedule.py  cp_sat_solver.py  cp_sat_tight_best.tsv  feasibility_test.py  package-lock.json  package.json  real-summer-schedule.tsv  refine.sh  solve.sh  summer-dump.tsv  summer_fixed_template.json  summer_fixed_template.tsv  summer_fixed_weights.json  summer_weights.json  template_weights.json  weights.json
solver-native/: Cargo.toml  build.rs  config.toml  summer_fixed_template.json  summer_fixed_template.tsv
solver-native/results/: construct-500.tsv
solver-native/results/construct-2026-02-24T075302/: 0290-c2-p1s2-r0-sa0.tsv  0530-c1-p1s1-r0-sa0.tsv  1410-c0-p1s0-r0-sa0.tsv
solver-native/results/construct-2026-02-24T084619/: 0280-c6-p1s16-r0-sa0.tsv  0320-c7-p1s27-r0-sa0.tsv  0380-c1-p1s1-r0-sa0.tsv  0380-c8-p1s88-r0-sa0.tsv  0390-c2-p1s2-r0-sa0.tsv  0390-c4-p1s4-r0-sa0.tsv  0510-c5-p1s15-r0-sa0.tsv  1280-c7-p1s27-r0-sa0.tsv  1330-c1-p1s1-r0-sa0.tsv  1330-c2-p1s2-r0-sa0.tsv  1420-c3-p1s13-r0-sa0.tsv  1460-c9-p1s9-r0-sa0.tsv  1580-c0-p1s0-r0-sa0.tsv
solver-native/results/construct-2026-02-24T084958/: 0290-c7-p1s27-r0-sa0.tsv  0320-c7-p1s27-r0-sa0.tsv  0370-c2-p1s2-r0-sa0.tsv  0380-c9-p1s39-r0-sa0.tsv  0390-c0-p1s0-r0-sa0.tsv  0390-c1-p1s1-r0-sa0.tsv  0390-c2-p1s2-r0-sa0.tsv  (+27 more)
solver-native/src/: complete.rs  construct.rs  cpu_sa.rs  cpu_sa_summer.rs  cpu_sa_summer_fixed.rs  cpu_sa_winter.rs  cpu_sa_winter_fixed.rs  first_half.rs  gpu_sa_loop.rs  gpu_setup.rs  gpu_solver.rs  gpu_types.rs  gpu_types_summer.rs  gpu_types_summer_fixed.rs  gpu_types_winter.rs  gpu_types_winter_fixed.rs  island_pool.rs  lib.rs  main.rs  output.rs  output_summer.rs  output_summer_fixed.rs  output_winter.rs  output_winter_elite.rs  output_winter_fixed.rs  refine.rs  rescore.rs  solver.wgsl  split_sa.rs  summer_exchange.wgsl  summer_fixed_exchange.wgsl  summer_fixed_main.rs  summer_fixed_solver.wgsl  summer_main.rs  summer_solver.wgsl  template_solver.rs  test_histogram.rs  winter_elite_main.rs  winter_exchange.wgsl  winter_fixed_exchange.wgsl  (+4 more)
solver-native/tests/: gpu_eval_summer.rs  gpu_eval_winter_fixed.rs  validate_winter_fixed.rs
solver-wasm/: Cargo.toml
solver-wasm/src/: lib.rs  sa.rs
(+1531 files in other folders)
