[package]
name = "solver-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver"
path = "src/gpu_solver.rs"

[[bin]]
name = "rescore"
path = "src/rescore.rs"

[dependencies]
solver-core = { path = "../solver-core" }
rand = { version = "0.9", features = ["small_rng"] }
chrono = "0.4"
serde_json = "1"
ctrlc = "3.5.2"
wgpu = "25"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
