[package]
name = "solver-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solver"
path = "src/gpu_solver.rs"

[[bin]]
name = "rescore"
path = "src/rescore.rs"

[[bin]]
name = "template_solver"
path = "src/template_solver.rs"

[dependencies]
solver-core = { path = "../solver-core" }
rand = { version = "0.9", features = ["small_rng"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3.5.2"
nix = { version = "0.29", features = ["signal"] }
wgpu = "25"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
