[package]
name = "solver-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solver-core = { path = "../solver-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", features = ["small_rng"] }
serde_json = "1"
